# RobTek_G1_2015

./: .gitignore
AI1/: README.txt  todo.txt
AI1/Programs/LegoFinal/: Makefile  RaceFinal.nxc
AI1/Programs/LegoFollowLine/: followLine.nxc
AI1/Programs/LegoFollowLine02/: followLine.nxc  followLine.nxc~
AI1/Programs/LegoFollowLine_2Sensors/: Makefile  followLine.nxc  followLine.nxc~
AI1/Programs/LegoFollowLine_3Sensors/: followLine.nxc
AI1/Programs/LegoSensorTest/: Makefile  sensorTest.nxc  sensorTest.nxc~
AI1/Programs/LegoSensorTest_2Sensors/: sensorTest.nxc
AI1/Programs/LegoSensorTest_3Sensors/: sensorTest.nxc~
AI1/Programs/LegoTurnRight/: Makefile  Makefile~  TurnRight.nxc  TurnRight.nxc~
AI1/Programs/ReliabilityTest/: Makefile  ReliabilityTest.nxc
AI1/Report/01/: report.tex
AI1/sokoban_maps/: 2015competition.txt  Example02.txt  map_spec.txt  simple_map.txt  solvertest01.txt  solvertest02.txt  solvertest03.txt
EMB1/FSM_Miniproject/: FSM.ppr
EMB1/FinalProject/Code/: planAhead.jou  planAhead_3060.backup.jou  rom_init.hex  segway.ppr
EMB1/FinalProject/Report/: finalProject.out  finalProject.tex
EMB1/Sorter_Project01/PCB_Driver_ADC/: ADC:LED.brd  ADC:LED.sch
EMB1/Sorter_Project01/PCB_LEDS/: LED_board.brd  LED_board.sch  LED_board_2.brd  LED_board_2.sch
EMB1/Sorter_Project01/PCB_adc/: pcb_adc.brd  pcb_adc.pro  pcb_adc.sch
EMB1/Sorter_Project01/PCB_design/: Sch_PowerSupply.brd  Sch_PowerSupply.sch
EMB1/Sorter_Project01/code/PC_FPGA_final/src/: CMakeCache.txt  CMakeLists.txt  Makefile  PC_FPGA  PC_FPGA.cpp  cmake_install.cmake
(+493 files in other folders)
